--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "concurrently": "^8.2.2"
   },
   "dependencies": {
-    "nodemailer": "^7.0.3"
+    "nodemailer": "^7.0.3",
+    "nprogress": "^0.2.0"
   }
 }
